Added `RoutesDownloader` actor
