# Travel Schedule/openapi.yaml
@@ -118,6 +118,7 @@ paths:
         - $ref: '#/components/parameters/resultTimezoneParam'
         - $ref: '#/components/parameters/addDaysMaskParam'
         - $ref: '#/components/parameters/transfersParam'
+          required: true
       responses:
         '200':
           description: success
@@ -390,7 +391,7 @@ components:
       in: query
       description: код перевозчика
       schema:
-        type: string
+        type: integer
 
     directionParam:
       name: direction
@@ -617,6 +618,8 @@ components:
         arrival:
           type: string
           nullable: true
+        departure:
+          type: string
         from:
           $ref: '#/components/schemas/Station'
         thread:
@@ -756,7 +759,7 @@ components:
       type: object
       properties:
         code:
-          type: number
+          type: integer
         codes:
           $ref: '#/components/schemas/CarrierCodes'
         title:
@@ -931,10 +934,12 @@ components:
     SettlementsStations:
       type: object
       properties:
+        code:
+          type: string
         direction:
           type: string
         codes:
-          $ref: '#/components/schemas/Carrier'
+          $ref: '#/components/schemas/StationCodes'
         station_type:
           type: string
         title:
